syntax = "proto3";
//$ go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
//$ go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
//$ export PATH="$PATH:$(go env GOPATH)/bin"
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=require_unimplemented_servers=false=paths=source_relative protobuf/*.proto
package grpc_server;

option go_package = "./grpc_server";

import "google/protobuf/timestamp.proto";

message Events {
  repeated Event events = 1;
}

service CreateEvent{
  rpc create(Event) returns (Event);
}

service GetList{
  rpc list(google.protobuf.Timestamp) returns (Events);
}

message Event {
  int64 id = 1;
  string content = 2;
  google.protobuf.Timestamp start_date = 3;
}